# cokacmux

./: .gitattributes  .gitignore  CLAUDE.md  CNAME  Cargo.toml  README.md  build.py  install_windows_build_deps.sh  manage.ps1  manage.sh
builder/: config.py  executor.py  logger.py  targets.py  tools.py  zig-ar.cmd  zig-cc-aarch64-windows.cmd  zig-cc-x86_64-windows.cmd
dist_beta/: cokacmux-linux-aarch64.sha256  cokacmux-linux-x86_64.sha256  cokacmux-macos-aarch64.sha256  cokacmux-macos-x86_64.sha256  cokacmux-windows-aarch64.exe.sha256  cokacmux-windows-x86_64.exe.sha256
docs/: INTENTIONAL_DIFFS.md  KEYBINDINGS.md  PLAN.md  RESULTS.md  SESSION_CLONE_NATIVE_FIDELITY_STRATEGY.md  VT100_FIX_AND_PTY_AUDIT.md
examples/: capture_claude.rs  clone_data_pty_audit.rs  drive_cokacmux.rs  feature_audit.rs  vt100_replay.rs  vt100_repro.rs
src/: debug.rs  error.rs  ids.rs  jsonl.rs  lib.rs  pivot.rs  time.rs
src/providers/: discovery.rs  mod.rs
src/providers/claude/: from_universal.rs  install.rs  mod.rs  path.rs  read.rs  sidecar.rs  write.rs
src/providers/codex/: from_universal.rs  install.rs  mod.rs  read.rs  write.rs
src/providers/opencode/: clone.rs  db.rs  from_universal.rs  install.rs  mod.rs  read.rs  write.rs
src/session/: clone.rs  clone_tree.rs  data.rs  mod.rs  native_validate.rs  remove.rs  render.rs  search.rs  title.rs
src/universal/: mod.rs  schema.rs  validate.rs
tests/: install.rs  live_acceptance.rs  pivot.rs  roundtrip.rs  session.rs
tools/: native_probe.py  normalize_eol.sh  with_msvc.ps1
